# DaktLib

./: .clang-format  .gitignore  .gitmodules  AGENT.md  ARCHITECRE.md  ARCHITECTURE.md  BINDINGS_ARCHITECTURE.md  CMakeLists.txt  README.md  Refactor_Plan.md  TODO.md
.github/: copilot-instructions.md
.github/instructions/: copilot-instructions.md.instructions.md
